# felbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml  rustfmt.toml
.sqlx/: query-015dc42bd8fca9108e73c3677abf332ce1470bb7636801b50c82d55e837a164a.json  query-026e9ce9186f284f0baa1752db42be6eeb4ce8bf90da47a85d7657955510f7e6.json  query-0434d1ca5e4f33286c824eb03ef63e7cab99173f2d8d1db12ae9da00a03d5a64.json  query-11f4b8e042034ac27eedc38532e9fd01b0ce97a30e346c1a251090a3b45dffaf.json  query-1687af68867c8405e4cae2b5f42017ee28975aa724f3cfa6fb0e3517d9419240.json  query-19f8436be80426ae1bce7474114e3544edd7de86904406a947f513adba7cc892.json  query-20025fd1778a80be4542dc04521ac86741bdcc88ace65b0ffc54b1e03f070a9f.json  query-21da8a2c218a1f2d9287886dd4b140c0e055482405e198a6f786b57d02fd1743.json  query-22d2bb5c56ffd337035c3a1f6923d7f0f80e22dee7beadb5de7ea919f32550c7.json  query-2f0af4dbaa8f90e3ec3b232f150ef3df26b6b69df50729a2b5da4d4ee6bed2ef.json  query-39c759a45c63332a23462b9bdd17c508ddc6528e8d8dc6b78f7f9a7ba2d9c507.json  query-4b9737f25b228b074e5aaf8e655162aaf56695dfcbfdeb6e3680e4a5ca8089ed.json  query-7c0471fdb9f383ab4c8a02c38d3d4c6c943b18d6776bd78e10dcb1bc99292ad3.json  query-a8de01098da698dd7e034026e00d63f14f034ad2b90ec390ed47ae84de9ea0cf.json  query-b4cf0a426d58154cc18ab685390ff7ab6b9fbc6b56e83bbd63905e1344171746.json  query-b8d407877964083eb6c46cff5df8fbc72bd0a73131999932ec68c1aff43bea2d.json  query-e2c2497213431b339dcb51ade37f5b8a3b0a5d62f8058359e438cda0dea92806.json  query-e8a4716ed8473ea4db426ca70ebe3c6fa19302accbf5894e3dfc2fe3d3785bda.json  (+2 more)
(+49 files in other folders)
