[package]
name = "telps"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
poise = "0.6.1"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
