[package]
name = "felbot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
itertools = "0.14.0"
maud = "0.27.0"
poise = "0.6.1"
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
